wip: 🤣 持续开发中

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
+<!--
+ * @Author: yjl
+ * @Date: 2024-04-18 15:32:24
+ * @LastEditors: yjl
+ * @LastEditTime: 2024-04-22 14:04:44
+ * @Description: 描述
+-->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>阿猹的React</title>
   </head>
   <body>
     <div id="root"></div>
